fixed whitespace bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,7 @@
 
 html {
   font-size: 62.5%;
+  overflow-x: hidden;
 }
 
 body {
